# CARP

./: README.md  pyproject.toml  setup.sh
.github/workflows/: test_init.yml  test_init_linux.yml  test_init_macOS.yml  test_init_windows.yml
assets/: CARP.txt
configs/: debug.conf
configs/digitiser/: wd1_dpp.conf  wd1_scope_a4818.conf
configs/recording/: five_ns_window.conf
core/: commands.py  controller.py  io.py  logging.py  tracker.py  worker.py
felib/: dig1_utils.py  digitiser.py  formats.py
log/: example_log
ui/: elements.py  oscilloscope.py
