[project]
name = "carp"
version = "0.1.0"
description = "CAEN digitiser readout application"
authors = [
    {name = "jwaiton"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "caen-felib (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
