[project]
name = "carp"
version = "0.1.0"
description = "CAEN digitiser readout application"
authors = [
    {name = "jwaiton"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "caen-felib (>=1.3.0,<2.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "pyside6 (>=6.9.0,<7.0.0)",
    "pyqtgraph (>=0.13.7,<0.14.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tables (>=3.10.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
